fix: secrets backup

--- a/helm/int-activitypub/templates/job-secrets-backup.yaml
+++ b/helm/int-activitypub/templates/job-secrets-backup.yaml
@@ -3,14 +3,14 @@ kind: CronJob
 metadata:
   name: "{{ include "int-activitypub.fullname" . }}-secrets-backup"
 spec:
-  schedule: "{{ .Values.secrets.backup.schedule }}"
+  schedule: "{{ .Values.backup.secrets.schedule }}"
   jobTemplate:
     spec:
       template:
         spec:
           containers:
-            - name: "{{ include "int-activitypub.fullname" . }}-tls-secret-backup"
-              image: "{{ .Values.secrets.backup.image }}"
+            - name: "{{ include "int-activitypub.fullname" . }}-secrets-backup"
+              image: "{{ .Values.backup.secrets.image }}"
               env:
                 - name: API_KEY_PRIVATE
                   valueFrom:
@@ -37,39 +37,40 @@ spec:
                 {{- end}}
                 {{- end}}
               volumeMounts:
-                - name: "{{ include "int-activitypub.fullname" . }}-backup"
+                - name: "{{ .Values.backup.secrets.volume.name }}"
                   mountPath: /var/backup
                   readOnly: false
               command:
                 - "/bin/sh"
                 - "-c"
                 - |
+                  mkdir -p {{ include "int-activitypub.fullname" . }}
                   if [ -n "$API_KEY_PRIVATE" ]; then  # Check if secret is not empty
                     echo "Original secret api.key.private is not empty. Creating backup..."
-                    echo "$API_KEY_PRIVATE" > /var/backup/api.key.private
+                    echo "$API_KEY_PRIVATE" > /var/backup/{{ include "int-activitypub.fullname" . }}/api-key-private
                   else
                     echo "Original secret api.key.private is empty. Skipping backup."
                   fi
                   if [ -n "$API_KEY_PUBLIC" ]; then  # Check if secret is not empty
                     echo "Original secret api.key.public is not empty. Creating backup..."
-                    echo "$API_KEY_PUBLIC" > /var/backup/api.key.public
+                    echo "$API_KEY_PUBLIC" > /var/backup/{{ include "int-activitypub.fullname" . }}/api-key-public
                   else
                     echo "Original secret api.key.public is empty. Skipping backup."
                   fi
                   if [ -n "$SECRET_TLS_CRT" ]; then  # Check if secret is not empty
                     echo "Original secret tls.crt is not empty. Creating backup..."
-                    echo "$SECRET_TLS_CRT" > /var/backup/tls.crt
+                    echo "$SECRET_TLS_CRT" > /var/backup/{{ include "int-activitypub.fullname" . }}/tls.crt
                   else
                     echo "Original secret tls.crt is empty. Skipping backup."
                   fi
                   if [ -n "$SECRET_TLS_KEY" ]; then  # Check if secret is not empty
                     echo "Original secret tls.key is not empty. Creating backup..."
-                    echo "$SECRET_TLS_KEY" > /var/backup/tls.key
+                    echo "$SECRET_TLS_KEY" > /var/backup/{{ include "int-activitypub.fullname" . }}/tls.key
                   else
                     echo "Original secret tls.key is empty. Skipping backup."
                   fi
           restartPolicy: OnFailure
           volumes:
-            - name: "{{ include "int-activitypub.fullname" . }}-backup"
+            - name: "{{ .Values.backup.secrets.volume.name }}"
               persistentVolumeClaim:
-                claimName: "{{ include "int-activitypub.fullname" . }}-backup"
+                claimName: "{{ .Values.backup.secrets.volume.name }}"
