--- a/helm/int-activitypub/templates/job-secrets-restore.yaml
+++ b/helm/int-activitypub/templates/job-secrets-restore.yaml
@@ -3,29 +3,32 @@ kind: CronJob
 metadata:
   name: "{{ include "int-activitypub.fullname" . }}-secrets-restore"
 spec:
-  schedule: "{{ .Values.secrets.restore.schedule }}"
+  schedule: "{{ .Values.backup.secrets.restore.schedule }}"
   jobTemplate:
     spec:
       template:
         spec:
           containers:
-            - name: "{{ include "int-activitypub.fullname" . }}-tls-secret-restore"
-              image: "{{ .Values.secrets.restore.image }}"
+            - name: "{{ include "int-activitypub.fullname" . }}-secrets-restore"
+              image: "{{ .Values.backup.secrets.restore.image }}"
               volumeMounts:
-                - name: "{{ include "int-activitypub.fullname" . }}-backup"
+                - name: "{{ .Values.backup.secrets.volume.name }}"
                   mountPath: /var/backup
                   readOnly: false
               command:
                 - "/bin/sh"
                 - "-c"
                 - |
-                  for i in $(ls /var/backup)
-                  do
-                    echo "/var/backup/$i: "
-                    cat /var/backup/$i
-                  done
+                  echo "/var/backup/{{ include "int-activitypub.fullname" . }}/api-key-private"
+                  cat /var/backup/{{ include "int-activitypub.fullname" . }}/api-key-private
+                  echo "/var/backup/{{ include "int-activitypub.fullname" . }}/api-key-public"
+                  cat /var/backup/{{ include "int-activitypub.fullname" . }}/api/-key-public
+                  echo "/var/backup/{{ include "int-activitypub.fullname" . }}/tls.crt"
+                  cat /var/backup/{{ include "int-activitypub.fullname" . }}/tls.crt
+                  echo "/var/backup/{{ include "int-activitypub.fullname" . }}/tls.key"
+                  cat /var/backup/{{ include "int-activitypub.fullname" . }}/tls.key
           restartPolicy: OnFailure
           volumes:
-            - name: "{{ include "int-activitypub.fullname" . }}-backup"
+            - name: "{{ .Values.backup.secrets.volume.name }}"
               persistentVolumeClaim:
-                claimName: "{{ include "int-activitypub.fullname" . }}-backup"
+                claimName: "{{ .Values.backup.secrets.volume.name }}"
