fix: secrets backup

--- a/helm/int-activitypub/templates/job-secrets-backup.yaml
+++ b/helm/int-activitypub/templates/job-secrets-backup.yaml
@@ -44,7 +44,7 @@ spec:
                 - "/bin/sh"
                 - "-c"
                 - |
-                  mkdir -p {{ include "int-activitypub.fullname" . }}
+                  mkdir -p /var/backup/{{ include "int-activitypub.fullname" . }}
                   if [ -n "$API_KEY_PRIVATE" ]; then  # Check if secret is not empty
                     echo "Original secret api.key.private is not empty. Creating backup..."
                     echo "$API_KEY_PRIVATE" > /var/backup/{{ include "int-activitypub.fullname" . }}/api-key-private
