fix: secrets backup

--- a/helm/int-activitypub/templates/job-secrets-restore.yaml
+++ b/helm/int-activitypub/templates/job-secrets-restore.yaml
@@ -22,7 +22,7 @@ spec:
                   echo "/var/backup/{{ include "int-activitypub.fullname" . }}/api-key-private"
                   cat /var/backup/{{ include "int-activitypub.fullname" . }}/api-key-private
                   echo "/var/backup/{{ include "int-activitypub.fullname" . }}/api-key-public"
-                  cat /var/backup/{{ include "int-activitypub.fullname" . }}/api/-key-public
+                  cat /var/backup/{{ include "int-activitypub.fullname" . }}/api-key-public
                   echo "/var/backup/{{ include "int-activitypub.fullname" . }}/tls.crt"
                   cat /var/backup/{{ include "int-activitypub.fullname" . }}/tls.crt
                   echo "/var/backup/{{ include "int-activitypub.fullname" . }}/tls.key"
