--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -138,7 +138,7 @@ api:
 backup:
   secrets:
     image: "alpine:3.20"
-    schedule: "0 0 * * *" # daily at midnight (UTC)
+    schedule: "0 0 * * 1" # weekly
     restore:
       image: "alpine:3.20"
       schedule: "0 0 31 2 *" # never, manually only
