--- a/helm/int-activitypub/templates/deployment.yaml
+++ b/helm/int-activitypub/templates/deployment.yaml
@@ -146,9 +146,11 @@ spec:
           livenessProbe:
             grpc:
               port: {{ .Values.service.port }}
+            timeoutSeconds: 10
           readinessProbe:
             grpc:
               port: {{ .Values.service.port }}
+            timeoutSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
