fix: pub timeout

--- a/helm/int-activitypub/templates/deployment.yaml
+++ b/helm/int-activitypub/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
               value: "{{ .Values.api.interests.detailsUriPrefix }}"
             - name: API_WRITER_BACKOFF
               value: "{{ .Values.api.writer.backoff }}"
+            - name: API_WRITER_TIMEOUT
+              value: "{{ .Values.api.writer.timeout }}"
             - name: API_WRITER_URI
               value: "{{ .Values.api.writer.uri }}"
             - name: API_READER_URI
