--- a/helm/int-activitypub/templates/service.yaml
+++ b/helm/int-activitypub/templates/service.yaml
@@ -19,5 +19,9 @@ spec:
       targetPort: callback
       protocol: TCP
       name: callback
+    - port: {{ .Values.service.metrics.port }}
+      targetPort: metrics
+      protocol: TCP
+      name: metrics
   selector:
     {{- include "int-activitypub.selectorLabels" . | nindent 4 }}
